Added CSS tasks: changes

--- a/task1.css
+++ b/task1.css
@@ -9,7 +9,7 @@
 }
 .my-btn {
   background-color: dodgerblue;
-  color: white;
+  color: black;
   padding: 10px;
   border: none;
   border-radius: 25px;
