Added CSS tasks:added div changes

--- a/task1.css
+++ b/task1.css
@@ -26,3 +26,27 @@ h1 {
 .my-btn:hover {
   background-color: darkblue;
 }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #222;
+  padding: 15px 30px;
+  color: white;
+}
+
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.menu a:hover {
+  color: lightblue;
+}
