--- a/style.css
+++ b/style.css
@@ -58,3 +58,13 @@ ul {
 .navbar ul li a:hover {
   background-color: #1e6b43;
 }
+/* Profile Image Styling */
+.profile-img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  margin-bottom: 15px;
+}
